[project]
name = "archive-recovery-toolkit"
version = "0.1.0"
description = "Reusable Wayback/CDX static-site recovery toolkit"
requires-python = ">=3.11"

[project.optional-dependencies]
web = [
  "jinja2>=3.1,<4",
  "starlette>=0.47,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.scripts]
archive-recovery = "archive_recovery.cli:main"

[tool.setuptools.package-data]
archive_recovery = ["web/templates/*.html", "web/static/*.css", "web/static/*.js"]
